syntax = "proto3";

package proto.recipient_config;

option go_package = "github.com/tel4vn/fins-microservices/gen/proto/pb;pb";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "google/protobuf/struct.proto";
import "buf/validate/validate.proto";

message RecipientConfigBodyRequest {
    repeated string recipient = 1;
    string recipient_type = 2;
    string provider = 3;
    string priority = 4;
    bool status = 5;
}

message RecipientConfigRequest {
    int32 limit = 1;
    int32 offset = 2;
    repeated string recipient = 3;
    repeated string priority = 4;
    repeated string provider = 5;
    string status = 6;
}

message RecipientConfigByIdRequest {
    string id = 1;
}

message RecipientConfigResponse {
    string code = 1;
    string message = 2;
    repeated google.protobuf.Struct data = 3;
    int32 total = 4;
}

message RecipientConfigPutRequest {
    string id = 1;
    string recipient = 2;
    string recipient_type = 3;
    string provider = 4;
    string priority = 5;
    bool status = 6;
}

message RecipientConfigByIdResponse {
    string code = 1;
    string message = 2;
    google.protobuf.Struct data = 3;
}

service RecipientConfig {
    rpc PostRecipientConfig (RecipientConfigBodyRequest) returns (RecipientConfigResponse) {
        option (google.api.http) = {
            post : "/bss/v1/recipient-config",
            body: "*"
        };
    }
    rpc GetRecipientConfigs (RecipientConfigRequest) returns (RecipientConfigResponse) {
        option (google.api.http) = {
            get : "/bss/v1/recipient-config",
        };
    }
    rpc GetRecipientConfigById (RecipientConfigByIdRequest) returns (RecipientConfigByIdResponse) {
        option (google.api.http) = {
            get: "/bss/v1/recipient-config/{id}",
        };
    }
    rpc PutRecipientConfigById (RecipientConfigPutRequest) returns (RecipientConfigByIdResponse) {
        option (google.api.http) = {
            put: "/bss/v1/recipient-config/{id}",
            body: "*"
        };
    }
    rpc DeleteRecipientConfigById (RecipientConfigByIdRequest) returns (RecipientConfigByIdResponse) {
        option (google.api.http) = {
            delete: "/bss/v1/recipient-config/{id}",
        };
    }
}
